# tangobot

./: .gitignore  README.md
base_controller/: build.gradle  package.xml  settings.gradle
base_controller/base_controllerlib/: build.gradle
base_controller/base_controllerlib/src/main/: AndroidManifest.xml
base_controller/base_controllerlib/src/main/java/com/github/ekumenlabs/base_controller/: BaseControllerNode.java  BaseOdomPublisher.java  BaseStatusPublisher.java
base_controller/base_controllerlib/src/main/java/com/github/ekumenlabs/base_driver/: AbstractOdometryStatus.java  BaseDevice.java  BaseStatus.java  InertialInformation.java  OdometryStatus.java
base_controller/base_controllerlib/src/main/java/com/github/ekumenlabs/base_driver/create/: CreateBaseDevice.java
base_controller/base_controllerlib/src/main/java/com/github/ekumenlabs/base_driver/husky/: HuskyBaseDevice.java  HuskyBaseUtils.java  HuskyOdometryStatus.java  HuskyPacket.java  HuskyPacketReader.java  HuskyParserException.java
base_controller/base_controllerlib/src/main/java/com/github/ekumenlabs/base_driver/kobuki/: KobukiBaseDevice.java  KobukiOdometryStatus.java  KobukiPacketParser.java  KobukiPacketReader.java
base_controller/gradle/wrapper/: gradle-wrapper.properties
navigation_setup/: CMakeLists.txt  package.xml
navigation_setup/include/: robot_navigation.rviz
navigation_setup/launch/: tangobot_demo_visualizer.launch  tangobot_navigation_bringup.launch
navigation_setup/launch/tools/: map.launch  map_to_odom.launch  navstack.launch
navigation_setup/src/: remap_topics  tango_extrinsics_publisher  tango_frames_remapper.py  tango_static_extrinsics_publisher.py
navstack_tools/: CMakeLists.txt  package.xml
navstack_tools/launch/: map_launcher.launch  map_to_odom.launch  tangobot_demo_visualizer.launch  tangobot_navigation_bringup.launch  turtlebot_demo_visualizer.launch
navstack_tools/launch/tools/: map_to_odom.launch
navstack_tools/map/: source_empty_world
navstack_tools/src/: remapTopics  tango_extrinsics_publisher.py  tango_frames_remapper.py  tango_static_extrinsics_publisher.py
std_turtlebot/: CMakeLists.txt  README.md  package.xml
std_turtlebot/launch/: empty_map_demo.launch  turtlebot_baseline.launch  view_model.launch  view_navigation.launch
std_turtlebot/launch/tools/: empty_map_demo.launch  robot_model_bringup.launch
std_turtlebot/script/: get_variables.sh  start_turtlebot_baseline.sh  start_visualization.sh
tango_ros_common/tango_ros_java/tango_ros_node/: build.gradle
tango_ros_common/tango_ros_native/: CMakeLists.txt
tangobot_app/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
tangobot_app/app/: build.gradle
tangobot_app/app/src/main/: AndroidManifest.xml
tangobot_app/app/src/main/cpp/: Android.mk  Application.mk
tangobot_app/app/src/main/cpp/include/: move_base_jni.h  move_base_util.h
tangobot_app/app/src/main/cpp/src/: move_base_jni.cpp  move_base_util.cpp
tangobot_app/app/src/main/res/layout/: main.xml  settings_activity.xml
tangobot_app/app/src/main/res/menu/: menu.xml
tangobot_app/app/src/main/res/raw/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  kobuki.yaml  (+4 more)
tangobot_app/gradle/wrapper/: gradle-wrapper.properties
tangobot_desktop/: CMakeLists.txt  package.xml
tangobot_desktop/launch/: tangobot_demo_visualizer.launch
usb_serial_android/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
usb_serial_android/UsbSerialLibrary/: build.gradle
usb_serial_android/UsbSerialLibrary/src/main/java/com/hoho/android/usbserial/driver/: CdcAcmSerialDriver.java
usb_serial_android/gradle/wrapper/: gradle-wrapper.properties
usb_serial_android/usb_seriallib/src/main/: AndroidManifest.xml
usb_serial_android/usb_seriallib/src/main/java/com/hoho/android/usbserial/driver/: UsbId.java
usb_serial_for_android/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
usb_serial_for_android/usbSerialForAndroid/: build.gradle
(+51 files in other folders)
