<?xml version="1.0"?>
<package>
  <name>base_controller</name>
  <version>0.1.4</version>
  <description>A base controller for doing Android base robots using ROS.</description>

  <maintainer email="lucas@creativa77.com.ar">Lucas Chiesa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>android_core</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>usb_serial_for_android</build_depend>
  <run_depend>usb_serial_for_android</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
