<?xml version="1.0"?>
<package>
  <name>navstack_tools</name>
  <version>0.1.0</version>
  <description>The navstack_tools package</description>

  <maintainer email="jubeira@ekumenlabs.com">Juan Ignacio Ubeira</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
