<?xml version="1.0"?>
<package>
  <name>std_turtlebot</name>
  <version>0.1.0</version>
  <description>The std_turtlebot package</description>

  <maintainer email="jubeira@ekumenlabs.com">juan</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- Packages for turtlebot metapackage -->
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_capabilities</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_teleop</run_depend>

  <!-- Packages for turtlebot apps metapackage -->
  <run_depend>turtlebot_actions</run_depend>
  <run_depend>turtlebot_calibration</run_depend>
  <run_depend>turtlebot_rapps</run_depend>
  <run_depend>turtlebot_follower</run_depend>
  <run_depend>turtlebot_navigation</run_depend>

  <!-- Packages for turtlebot interactions metapackage -->  
  <run_depend>turtlebot_dashboard</run_depend>
  <run_depend>turtlebot_interactive_markers</run_depend>
  <run_depend>turtlebot_rviz_launchers</run_depend>

  <!-- Packages for turtlebot simulator metapackage -->  
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>turtlebot_stage</run_depend>
  <run_depend>turtlebot_stdr</run_depend>

  <run_depend>kobuki_ftdi</run_depend>

  <export>
  </export>
</package>
